2010-05-31  Olivier Goffart <olivier.goffart@nokia.com>

Reviewed by Oliver Hunt.

        [PATCH] compilation error with clang in JSDOMBinding.h
        https://bugs.webkit.org/show_bug.cgi?id=39945

        JSNode is only forward declared at this point. And since neither
        "wrapper" nor JSValue are type-dependent. Compilers should report errors
        at the first compilation pass.

        The fix is to move the conversion the line above, as the call to the
        function getCachedDOMNodeWrapper is type-dependent, the conversion will
        happen at template-instantiation time.

        See also http://llvm.org/bugs/show_bug.cgi?id=7244

        * bindings/js/JSDOMBinding.h:
        (WebCore::getDOMNodeWrapper):

Canonical link: https://commits.webkit.org/51490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60451 268f45cc-cd09-0410-ab3c-d52691b4dbfc